# oaesis

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  Makefile.mint  Makefile.old  Makefile.purec  NEWS  OAESIS-VERSION  README  ToDo  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  config.h.mint  config.h.mint.old  config.h.purec  configure  configure.in  ltconfig  mincl.mint  mincl.purec  mkinstalldirs  oaesis-config.in  oaesis.cnf  oaesis.m4  oaesis.m4.in
doc/: Compatibility.txt  Makefile  Specification.lyx  models.txt
src/: .cvsignore  .depend  .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.mint  Makefile.purec  appl.c  appl.h  boot.c  boot.h  config.h  debug.c  debug.h  depend  docalls.c  evnt.c  evnt.h  evnthndl.c  evnthndl.h  form.c  form.h  fsel.c  fsel.h  gcc.s  gemdefs.h  global.c  global.h  graf.c  graf.h  lxgemdos.h  main.c  menu.c  menu.h  mesagdef.h  mintdefs.h  misc.c  misc.h  mousedev.c  (+29 more)
src/comm/: .gitignore  Makefile.am  Makefile.in  srv_get.h  srv_get_pmsg.c  srv_get_sockets.c  srv_pmsg.h  srv_put.h  srv_put_pmsg.c  srv_put_sockets.c  srv_sockets.h
src/common/: Makefile.am  Makefile.in  debug.c  debug.h  gemdefs.h  mesagdef.h  mintdefs.h  oconfig.h  srv_interface.h  types.h  vdi.c  vdi.h  version.h
src/launcher/: .cvsignore  .gitignore  Makefile.am  Makefile.in  Makefile.mint  Makefile.purec  boot.c  boot.h  launch.hrd  launch.rsc  launcher.c  launcher.h  misc.c  misc.h
src/lib/: .cvsignore  Makefile.am  Makefile.in  Makefile.mint  Makefile.purec  aesbind.c  aesbind.h  appl.c  appl.h  cursors.hrd  cursors.rsc  docalls.c  evnt.c  evnt.h  evnthndl.c  evnthndl.h  form.c  form.h  fsel.c  fsel.h  graf.c  graf.h  lib_comm.h  lib_comm_device.c  lib_global.c  lib_global.h  lib_mem.c  lib_mem.h  lib_misc.c  lib_misc.h  lib_strace.c  lib_strace.h  menu.c  menu.h  oaesis.h  objc.c  objc.h  resource.c  resource.hrd  resource.rsc  (+13 more)
src/server/: .cvsignore  Makefile.am  Makefile.in  Makefile.mint  Makefile.purec  boot.c  boot.h  gcc.s  lxgemdos.h  main.c  mousedev.c  purec.s  rlist.c  srv.c  srv.h  srv_appl.c  srv_appl.h  srv_appl_info.c  srv_appl_info.h  srv_call.c  srv_call.h  srv_comm.h  srv_comm_device.c  srv_comm_device.h  srv_event.c  srv_event.h  srv_get.c.in  srv_global.c  srv_global.h  srv_kdebug.c  srv_kdebug.h  srv_malloc.h  srv_menu.c  srv_menu.h  srv_misc.c  srv_misc.h  srv_queue.c  srv_queue.h  srv_trace.h  srv_wind.c  (+1 more)
src/startup/: .cvsignore  Makefile.am  Makefile.mint  boot.c  boot.h  is_of_type.c  is_of_type.h  main.c
src/test/: test2rsc.h  testmen.h  trackvdi.c
src/wm/: wm.c  wm.h
test/: .cvsignore  .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.old  formtest.c  structtest.c  testmen.c  testmenu.c
test/dr-gem/: .gitignore  Makefile.am  exampl10.c  exampl11.c  exampl11.def  exampl11.h  exampl11.rsc  exampl12.c  exampl12.def  exampl12.h  exampl12.rsc  exampl13.c  exampl13.def  exampl13.rsc  exampl14.c  exampl15.c  exampl15.def  exampl15.rsc  exampl16.c  exampl16.h  exampl16.rsc  example.c  example1.c  example2.c  example3.c  example3.def  example3.h  example3.rsc  example4.c  example4.def  example4.h  example4.rsc  example5.c  example5.def  example5.h  example5.rsc  example6.c  example6.def  example6.h  example6.rsc  (+8 more)
tools/: .cvsignore  .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.mint  Makefile.purec  cleanret.c  depcheck.c  r2c.c  r2c_raw.c  switchvt.c
