bin_PROGRAMS = oaesis

oaesis_SOURCES = \
         appl.c boot.c debug.c docalls.c evnt.c evnthndl.c form.c fsel.c \
         global.c graf.c main.c menu.c misc.c objc.c \
         resource.c rlist.c rsrc.c scrp.c shel.c srv.c srv_call.c vdi.c \
         wind.c \
         appl.h boot.h debug.h evnt.h evnthndl.h form.h fsel.h gemdefs.h \
         global.h \
         graf.h lxgemdos.h mintdefs.h menu.h mesagdef.h misc.h mousedev.h \
         oconfig.h \
         objc.h resource.h rlist.h rsrc.h scrp.h shel.h srv.h srv_call.h \
         types.h \
         version.h vdi.h wind.h

EXTRA_oaesis_SOURCES = \
         mousedev.c