SUBDIRS = comm lib

CFLAGS = -Icomm

bin_PROGRAMS = oaesis

oaesis_SOURCES = \
         boot.c debug.c \
         global.c main.c misc.c \
         resource.c \
        rlist.c \
         srv.c srv_get.c \
         vdi.c \
         boot.h debug.h evnthndl.h gemdefs.h \
         global.h \
         lxgemdos.h mintdefs.h menu.h mesagdef.h misc.h mousedev.h \
         oconfig.h \
         objc.h resource.h rlist.h rsrc.h scrp.h shel.h srv.h types.h \
         version.h vdi.h wind.h

EXTRA_oaesis_SOURCES = \
         mousedev.c
