SUBDIRS = comm common lib server

CFLAGS = -Icomm

#bin_PROGRAMS = oaesis

#oaesis_SOURCES = \
#         resource.c \
#        rlist.c \
#         srv.c srv_get.c \
#         vdi.c \
#         evnthndl.h gemdefs.h \
#         global.h \
#         menu.h mesagdef.h misc.h mousedev.h \
#         oconfig.h \
#         objc.h resource.h rlist.h rsrc.h scrp.h shel.h srv.h types.h \
#         wind.h

#EXTRA_oaesis_SOURCES = \
#         mousedev.c
