INCLUDES = -I ../../src/lib

noinst_PROGRAMS = \
	example.prg \
	example1.prg \
	example2.prg \
	example3.prg \
	example4.prg \
	example5.prg \
	example6.prg \
	example7.prg \
	example8.prg \
	example9.prg \
	example10.prg \
	example12.prg \
	example11.prg

example_prg_SOURCES = example.c
example1_prg_SOURCES = example1.c
example2_prg_SOURCES = example2.c
example3_prg_SOURCES = example3.c example3.h example3.rsc treeaddr.h
example4_prg_SOURCES = example4.c example4.h example4.rsc treeaddr.h
example5_prg_SOURCES = example5.c example5.h example5.rsc treeaddr.h
example6_prg_SOURCES = example6.c example6.h example6.rsc treeaddr.h
example7_prg_SOURCES = example7.c example7.h example7.rsc treeaddr.h
example8_prg_SOURCES = example8.c example8.h example8.rsc treeaddr.h
example9_prg_SOURCES = example9.c
example10_prg_SOURCES = exampl10.c
example11_prg_SOURCES = exampl11.c exampl11.h exampl11.rsc treeaddr.h
example12_prg_SOURCES = exampl12.c exampl12.h exampl12.rsc treeaddr.h

if MINT_TARGET
example_prg_LDADD = ../../src/lib/liboaesis.a
example1_prg_LDADD = ../../src/lib/liboaesis.a
example2_prg_LDADD = ../../src/lib/liboaesis.a
example3_prg_LDADD = ../../src/lib/liboaesis.a
example4_prg_LDADD = ../../src/lib/liboaesis.a
example5_prg_LDADD = ../../src/lib/liboaesis.a
example6_prg_LDADD = ../../src/lib/liboaesis.a
example7_prg_LDADD = ../../src/lib/liboaesis.a
example8_prg_LDADD = ../../src/lib/liboaesis.a
example9_prg_LDADD = ../../src/lib/liboaesis.a
example10_prg_LDADD = ../../src/lib/liboaesis.a
example11_prg_LDADD = ../../src/lib/liboaesis.a
example12_prg_LDADD = ../../src/lib/liboaesis.a
else # MINT_TARGET
example_prg_LDADD = ../../src/lib/liboaesis.la
example1_prg_LDADD = ../../src/lib/liboaesis.la
example2_prg_LDADD = ../../src/lib/liboaesis.la
example3_prg_LDADD = ../../src/lib/liboaesis.la
example4_prg_LDADD = ../../src/lib/liboaesis.la
example5_prg_LDADD = ../../src/lib/liboaesis.la
example6_prg_LDADD = ../../src/lib/liboaesis.la
example7_prg_LDADD = ../../src/lib/liboaesis.la
example8_prg_LDADD = ../../src/lib/liboaesis.la
example9_prg_LDADD = ../../src/lib/liboaesis.la
example10_prg_LDADD = ../../src/lib/liboaesis.la
example11_prg_LDADD = ../../src/lib/liboaesis.la
example12_prg_LDADD = ../../src/lib/liboaesis.la
endif # MINT_TARGET

